
3.66  2012-12-13
  - Improved documentation.
  - Improved tests.
  - Fixed multipart boundary detection bug in Mojo::Content.

3.65  2012-12-09
  - Added upgrade method to Mojo::UserAgent::Transactor.
  - Added is_range method to Mojo::Asset.
  - Improved documentation.
  - Improved tests.
  - Fixed parameter replacement bug in Mojo::Parameters. (alexbyk, sri)
  - Fixed small paragraph bug in Mojo::DOM::HTML.

3.64  2012-12-01
  - Improved documentation.
  - Improved tests.
  - Fixed bug where Mojo::UserAgent::Transactor would escape
    Content-Disposition values.

3.63  2012-11-28
  - Added support for smooth restarting to Morbo.
  - Added acceptor method to Mojo::IOLoop.
  - Added stop method to Mojo::Server::Daemon.
  - Improved memory usage of chunked transfer encoding parser in
    Mojo::Content.
  - Improved documentation.
  - Improved tests.

3.62  2012-11-26
  - Improved compatibility with IO::Socket::SSL 1.79.
  - Improved encode/decode performance in Mojo::Util by using a cache.
  - Improved tests.
  - Fixed clone bugs in Mojo::URL.

3.61  2012-11-25
  - Added protocol method to Mojo::URL.
  - Added charset attribute to Mojo::Path.
  - Improved support for relative redirects in Mojo::UserAgent::Transactor.
  - Improved documentation.
  - Improved tests.
  - Fixed clone bugs in Mojo::Parameters and Mojo::URL.
  - Fixed case sensitivity bugs in Mojo::UserAgent::Transactor.

3.60  2012-11-22
  - Added unexpected event to Mojo::Transaction::HTTP.
  - Improved documentation.
  - Improved tests.
  - Fixed Mojo::UserAgent to ignore unexpected 1xx responses.

3.59  2012-11-20
  - Improved tests.
  - Fixed memory leak in Mojo::Message::Request.
  - Fixed keep alive bug in Mojo::Server::Daemon.

3.58  2012-11-19
  - Improved documentation.
  - Improved tests.
  - Fixed state bugs in Mojo::Content::MultiPart.
  - Fixed Mojo::UserAgent to remove codes from parser errors.

3.57  2012-11-12
  - Deprecated Mojo::Exception->raw_message.